--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -64,7 +64,7 @@ jobs:
           /d:sonar.cpd.cs.minimumLines=5 `
           /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
           /d:sonar.qualitygate.wait=true `
-          /d:sonar.host.url="http://localhost:9000"
+          /d:sonar.host.url="http://sonarcloud.io"
         shell: pwsh
       # 2) BUILD & TEST
       - name: Restore
