--- a/NetSdrClientAppTests/NetSdrClientAppTests.csproj
+++ b/NetSdrClientAppTests/NetSdrClientAppTests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetSdrClientApp\NetSdrClientApp.csproj" />
+    <ProjectReference Include="..\EchoTcpServer\EchoServer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
